Ironed our the text color, specs and hooked it up to the quest log

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -38,5 +38,5 @@ commands:
         description: QuestManager admin command
         permission: questmanager.admin
     player:
-        usage: /player [title]
+        usage: /player [title | options]
         description: Displays player menus
